again-service/k8s/overlays/minikube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: again-service
  labels:
    version: latest
spec:
  selector:
    matchLabels:
      version: latest
  template:
    metadata:
      labels:
        version: latest
    spec:
      containers:
      - name: again-service
        image: dsoc/again-service:latest
