again-service/k8s/overlays/minikube/service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: again-service-ingress
  labels:
    version: latest
spec:
  hosts:
    - detectify.challenge.local
  selector:
    version: latest
