again-service/k8s/overlays/minikube/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: again-service-ingress
spec:
  hosts:
    - detectify.challenge.local
